// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreativeCommons /> Should render correctly 1`] = `
.c5 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c5:first-of-type {
  margin-top: 0.86rem;
}

.c9 {
  width: 1.25rem;
  height: 1.25rem;
}

.c6 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: #9932cc;
  fill: #9932cc;
}

.c6:focus-visible {
  position: relative;
  outline: none !important;
}

.c6:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.75rem;
  pointer-events: none;
}

.c6:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c10 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c3 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c7 {
  margin: 0;
}

.c1 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  margin: 2.13rem 0 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  margin-left: 0;
  padding-top: 1rem;
  padding-bottom: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fbfbfb;
}

.c2 {
  width: 100%;
  padding-right: 1.875rem;
  padding-left: 1.865rem;
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c6:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    color: #da70d6;
    fill: #da70d6;
  }

  .c6:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    background-color: #121313;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <h1
        class="c3 c4"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="c5"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="c6"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c7"
          >
            Creative Commons BY-SA 3.0
          </span>
          <div
            class="c8"
          >
            <svg
              class="c9 c10"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="c6"
          href="/contact"
        >
          <span
            class="c7"
          >
            contact me
          </span>
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`<CreativeCommons /> Should render correctly with custom className 1`] = `
.c5 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c5:first-of-type {
  margin-top: 0.86rem;
}

.c9 {
  width: 1.25rem;
  height: 1.25rem;
}

.c6 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: #9932cc;
  fill: #9932cc;
}

.c6:focus-visible {
  position: relative;
  outline: none !important;
}

.c6:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.75rem;
  pointer-events: none;
}

.c6:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 0.4rem;
  height: 1rem;
  margin-left: 0.55rem;
}

.c10 {
  position: absolute;
  width: 1rem;
  height: 1rem;
  margin-top: 0.12rem;
  margin-left: -0.45rem;
}

.c3 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c7 {
  margin: 0;
}

.c1 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  margin: 2.13rem 0 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 2rem;
  margin-left: 0;
  padding-top: 1rem;
  padding-bottom: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fbfbfb;
}

.c2 {
  width: 100%;
  padding-right: 1.875rem;
  padding-left: 1.865rem;
  text-align: center;
}

@media (prefers-color-scheme:dark) {
  .c6:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c6 {
    color: #da70d6;
    fill: #da70d6;
  }

  .c6:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    background-color: #121313;
  }
}

<div>
  <div
    class="c0 test-custom-className"
  >
    <div
      class="c1 c2"
    >
      <h1
        class="c3 c4"
        id="copyright"
      >
        Copyright
      </h1>
      <span
        class="c5"
      >
        Most of my photos are licensed under
         
        <a
          aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
          class="c6"
          href="https://creativecommons.org/licenses/by-sa/3.0/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c7"
          >
            Creative Commons BY-SA 3.0
          </span>
          <div
            class="c8"
          >
            <svg
              class="c9 c10"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        .
        <br />
        If you are unsure about your right to use them please 
        <a
          class="c6"
          href="/contact"
        >
          <span
            class="c7"
          >
            contact me
          </span>
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;
